--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "formik": "^2.4.6",
     "moment": "^2.30.1",
     "react": "^18.2.0",
+    "react-confirm-alert": "^3.0.6",
     "react-dom": "^18.2.0",
     "react-router": "^6.16.0",
     "react-router-dom": "^6.16.0",
